feat: complete enterprise-grade event booking platform features and build setup